Ver 0.0.1
Latest:
- added jobs and user jobs to state

Recent:
- adding User Challenges credentials to state
- adding helper utils for handling MyCV data
- docs upgrade, no new features added.
- Adjusted the widgets on MyCv to be able to take different types of content (previously they could only take text)