@@ -1,3 +1,0 @@
-import ButtonContainer from './ButtonContainer'
-
-export default ButtonContainer
