@@ -4,11 +4,12 @@ import { View } from 'react-native'
 import { Colors } from '../../styles'
 import { WithChildren } from '../../types/react.types'
 import { isNotNil } from '../../utils/ramda.utils'
+import EditButton from '../EditButton/EditButton'
 import ListCardHeader from '../ListCardHeader'
 import Optional from '../Optional'
 import Text, { TextAlign } from '../Typography'
 import styles from './CvCard.styles'
-import EditButton from './EditButton'
+import { shouldShowContent } from './CvCard.utils'
 
 type Props = WithChildren<{
   title: string
@@ -21,14 +22,17 @@ const CvCard = ({ title, fallback, count, badgeColor = Colors.white, onEdit, chi
   <View style={styles.container}>
     <ListCardHeader
       color={badgeColor}
-      count={count || 0}
+      count={count}
       header={title}
       hasCountBadge={isNotNil(count) as boolean}
       rightComponent={<EditButton onPress={onEdit} />}
       hasBorder
     />
     <View style={styles.content}>
-      <Optional condition={!!children} fallback={<Text.Body align={TextAlign.center}>{fallback}</Text.Body>}>
+      <Optional
+        condition={shouldShowContent(count, children)}
+        fallback={<Text.Body align={TextAlign.center}>{fallback}</Text.Body>}
+      >
         {children}
       </Optional>
     </View>
