@@ -1,0 +1,10 @@
+import { StyleSheet, ViewStyle } from 'react-native'
+
+const styles = {
+  container: {
+    flex: 1,
+    width: '100%',
+  } as ViewStyle,
+}
+
+export default StyleSheet.create(styles)
