@@ -1,0 +1,3 @@
+import CvCardListBody from './CvCardListBody'
+
+export default CvCardListBody
