@@ -1,3 +1,5 @@
 import CvCard from './CvCard'
+import CvCardListBody from './CvCardListBody'
 
 export default CvCard
+export { CvCardListBody }
