@@ -1,0 +1,13 @@
+import { StyleSheet, ViewStyle } from 'react-native'
+
+import { Colors, colors } from '../../styles'
+
+const styles = {
+  container: {
+    backgroundColor: colors[Colors.lightGrey],
+    height: 1,
+    width: '100%',
+  } as ViewStyle,
+}
+
+export default StyleSheet.create(styles)
