@@ -1,0 +1,8 @@
+import React from 'react'
+import { View } from 'react-native'
+
+import styles from './Divider.styles'
+
+const Divider = () => <View style={styles.container} />
+
+export default Divider
