@@ -1,0 +1,3 @@
+import Divider from './Divider'
+
+export default Divider
