@@ -45,6 +45,7 @@ declare module 'ramda' {
   export function propOr(...rest: any[]): any
   export function reduce(...rest: any[]): any
   export function reduceRight(...rest: any[]): any[]
+  export function slice(...rest: any[]): any
   export function tail(...rest: any[]): any[]
   export function tap(...rest: any[]): any[]
   export function toPairs(...rest: any[]): any
